# aez_key_commitment

./: .gitignore  Cargo.toml  README.md
src/: aez_utils.rs  main.rs  parallel.rs  tests.rs  tools.rs
src/tests/: test_vectors.rs
