[package]
name = "aez_kcommit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version = "0.8.2", features = ["hazmat"] }
rustc-serialize = "0.3"
bit-vec = "0.6.3"
rand = "0.8.5"
num_cpus = "*"

[dev-dependencies]
rustc-serialize = "0.3"
